# mips

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  add.cpp  doxyfile  grupo.txt  mips.rar  nor.cpp  passnota.cpp  run_tests.sh  xor.cpp
docs/html/: abstract__decoder_8hpp_source.html  add_8hpp.html  add_8hpp_source.html  addinc_8hpp.html  addinc_8hpp_source.html  and_8hpp.html  and_8hpp_source.html  andnota_8hpp.html  andnota_8hpp_source.html  annotated.html  asl_8hpp_source.html  asr_8hpp_source.html  classMIPS_1_1AddIncInstruction-members.html  classMIPS_1_1AddIncInstruction.html  classMIPS_1_1AddInstruction-members.html  classMIPS_1_1AddInstruction.html  classMIPS_1_1AddInstructionEncoder-members.html  classMIPS_1_1AddInstructionEncoder.html  classMIPS_1_1AndInstruction-members.html  classMIPS_1_1AndInstruction.html  classMIPS_1_1AndnotaInstruction-members.html  classMIPS_1_1AndnotaInstruction.html  classMIPS_1_1AslInstruction-members.html  classMIPS_1_1AslInstruction.html  classMIPS_1_1AsrInstruction-members.html  classMIPS_1_1AsrInstruction.html  classMIPS_1_1CPU-members.html  classMIPS_1_1CPU.html  classMIPS_1_1ControlUnit-members.html  classMIPS_1_1ControlUnit.html  classMIPS_1_1DecaInstruction-members.html  classMIPS_1_1DecaInstruction.html  classMIPS_1_1DecoderFinder-members.html  classMIPS_1_1DecoderFinder.html  classMIPS_1_1Encoder-members.html  classMIPS_1_1Encoder.html  classMIPS_1_1EncoderFactory-members.html  classMIPS_1_1EncoderFactory.html  classMIPS_1_1Event-members.html  classMIPS_1_1Event.html  (+328 more)
docs/latex/: add_8hpp.tex  addinc_8hpp.tex  and_8hpp.tex  andnota_8hpp.tex  (+232 more)
src/: main.cpp
(+370 files in other folders)
